adds undead sublcass updates spell list various minor updates

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="hori">
             <h1>Floshe</h1>
             <h2>Level: 17</h2>
-            <h2>Class: Celestial Fiend Warlock</h2>
+            <h2>Class: Undead Celestial Fiend Warlock</h2>
             <h2>Race: Locathah</h2>
             <h2>Background: Courtier</h2>
             <h2>Alignment: True Neutral</h2>
@@ -32,7 +32,7 @@
             <div class="abil">
                 <h1>Dexterity: 17</h1>
                 <h3>Modifier: +3</h3>
-                <h3>Save: +3</h3>
+                <h3>Save: +9</h3>
             </div>
             <div class="abil">
                 <h1>Constitution: 19(9)</h1>
@@ -50,7 +50,7 @@
                 <h3>Save: +10</h3>
             </div>
             <div class="abil">
-                <h1>Charisma: 8</h1>
+                <h1>Charisma: 22</h1>
                 <h3>Modifier: +6</h3>
                 <h3>Save: +12</h3>
             </div>
@@ -102,7 +102,7 @@
                 <h3>Abyssal</h3>
                 <h3>Aquan</h3>
                 <h3>Celestial</h3>
-                <h3>Deep Speech</h3>
+                <h3>Sign Language</h3>
                 <h3>Ignan</h3>
                 <h3>Infernal</h3>
             </div>
@@ -146,16 +146,16 @@
                 <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Scorching Ray</h3>
                 <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Ashardalon's Stride</h3>
                 <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Fireball</h3>
-                <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Glyph of Warding</h3>
+                <h3>Hex</h3>
                 <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Melf's Minute Meteors</h3>
                 <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Revivify</h3>
                 <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Spirit Shroud</h3>
                 <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Dimension Door</h3>
                 <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Sickening Radiance</h3>
-                <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Wall of Fire</h3>
-                <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Mass Cure Wounds</h3>
+                <h3>Prayer of Healing</h3>
+                <h3>Death Ward</h3>
                 <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Scrying</h3>
-                <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Wall of Light</h3>
+                <h3>Antilife Shell</h3>
             </div>
             <div class="slot">
                 <h2>Rituals</h2>
@@ -182,9 +182,9 @@
             <div class="slot">
                 <h2>Mystic Arcanum</h2>
                 <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Investiture of Flame</h3>
-                <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Crown of Stars</h3>
-                <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Sunburst</h3>
-                <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Prismatic Wall</h3>
+                <h3>Plane Shift</h3>
+                <h3>Telepathy</h3>
+                <h3>Mass Heal</h3>
             </div>
             <div class="slot">
                 <h2>Coven</h2>
@@ -228,7 +228,8 @@
                 <h3>Metal Tower Blueprints</h3>
                 <h3>Nathan's Paper</h3>
                 <h3>Maid Stopwatch</h3>
-                <h3>?'s Tablet</h3>
+                <h3>Hazel's Tablet</h3>
+                <h3>Book of Avatars</h3>
             </div>
         </div>
         <div class="hori">
@@ -251,6 +252,7 @@
                 <h3 onmouseover="showFeat(this)" onmouseleave="hideSpell(this)">Pact Boon (Tome)</h3>
                 <h3 onmouseover="showFeat(this)" onmouseleave="hideSpell(this)">Mystic Arcanum</h3>
                 <h3 onmouseover="showFeat(this)" onmouseleave="hideSpell(this)">Contact Patron</h3>
+                <h3>Transformations</h3>
             </div>
             <div class="feat">
                 <h2>Subclass</h2>
@@ -268,6 +270,13 @@
                         <h3 onmouseover="showFeat(this)" onmouseleave="hideSpell(this)">Radiant Soul</h3>
                         <h3 onmouseover="showFeat(this)" onmouseleave="hideSpell(this)">Seraphim's Touch</h3>
                         <h3 onmouseover="showFeat(this)" onmouseleave="hideSpell(this)">Seraph Transformation</h3>
+                    </div>
+                    <div>
+                        <h2>Undead</h2>
+                        <h3>Not Dead Yet</h3>
+                        <h3>Soul Fire</h3>
+                        <h3>Undying</h3>
+                        <h3>Your Contract has Expired</h3>
                     </div>
                 </div>
             </div>
