woopsie forgor smth

--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
                 <h3>Nathan's Paper</h3>
                 <h3>Maid Stopwatch</h3>
                 <h3>Hazel's Tablet</h3>
+                <h3>Prismatic Wall Glyph of Warding</h3>
                 <h3>Book of Avatars</h3>
             </div>
         </div>
