--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <body>
         <div class="hori">
             <h1>Floshe</h1>
-            <h2>Level: 17</h2>
+            <h2>Level: 18</h2>
             <h2>Class: Undead Celestial Fiend Warlock</h2>
             <h2>Race: Locathah</h2>
             <h2>Background: Courtier</h2>
             <h2>Alignment: True Neutral</h2>
         </div>
         <div class="hori">
-            <h2>HP: 161</h2>
-            <h2>Hit Dice: 17d8</h2>
+            <h2>HP: 170(36)</h2>
+            <h2>Hit Dice: 18d8</h2>
             <h2>AC: 20</h2>
             <h2>Proficiency: +6</h2>
             <h2>Speed: 30(W/S)</h2>
@@ -121,7 +121,7 @@
                 <h3>4th Level: 0(2)</h3>
                 <h3>5th Level: 0(2)</h3>
                 <h3>6th Level: 4</h3>
-                <h3>9th Level: 2</h3>
+                <h3>9th Level: 2(1)</h3>
             </div>
         </div>
         <div class="hori">
@@ -129,7 +129,7 @@
             <div class="slot">
                 <h2>Cantrips</h2>
                 <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Fire Bolt</h3>
-                <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Light</h3>
+                <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Encode Thoughts</h3>
                 <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Mage Hand</h3>
                 <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Message</h3>
                 <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Minor Illusion</h3>
@@ -140,12 +140,13 @@
                 <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Shocking Grasp</h3>
             </div>
             <div class="slot">
-                <h2>Spells(15)</h2>
-                <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Cure Wounds</h3>
+                <h2>Spells(17)</h2>
+                <h3>Detect Thoughts</h3>
                 <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Hellish Rebuke</h3>
                 <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Scorching Ray</h3>
                 <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Ashardalon's Stride</h3>
                 <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Fireball</h3>
+                <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Glyph of Warding</h3>
                 <h3>Hex</h3>
                 <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Melf's Minute Meteors</h3>
                 <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Revivify</h3>
@@ -156,6 +157,7 @@
                 <h3>Death Ward</h3>
                 <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Scrying</h3>
                 <h3>Antilife Shell</h3>
+                <h3>Contingency</h3>
             </div>
             <div class="slot">
                 <h2>Rituals</h2>
@@ -168,6 +170,7 @@
                 <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Guiding Hand</h3>
                 <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Identify</h3>
                 <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Illusory Script</h3>
+                <h3>Memorize Spell</h3>
                 <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Purify Food and Drink</h3>
                 <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Scribe Spell</h3>
                 <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Speak with Animals</h3>
@@ -181,10 +184,10 @@
             </div>
             <div class="slot">
                 <h2>Mystic Arcanum</h2>
-                <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Investiture of Flame</h3>
+                <h3>Forbiddance</h3>
                 <h3>Plane Shift</h3>
                 <h3>Telepathy</h3>
-                <h3>Mass Heal</h3>
+                <h3>Foresight</h3>
             </div>
             <div class="slot">
                 <h2>Coven</h2>
@@ -225,12 +228,13 @@
                 <h3>Ink Pen</h3>
                 <h3>Gasoline 1gal</h3>
                 <h3>Camera</h3>
-                <h3>Metal Tower Blueprints</h3>
                 <h3>Nathan's Paper</h3>
-                <h3>Maid Stopwatch</h3>
+                <h3>Maid's Stopwatch</h3>
                 <h3>Hazel's Tablet</h3>
                 <h3>Prismatic Wall Glyph of Warding</h3>
                 <h3>Book of Avatars</h3>
+				<h3>Calamitus' Tome</h3>
+				<h3>Silla's Contract<h3>
             </div>
         </div>
         <div class="hori">
@@ -248,7 +252,7 @@
             <div class="feat">
                 <h2>Class</h2>
                 <h3 onmouseover="showFeat(this)" onmouseleave="hideSpell(this)">Pact Magic</h3>
-                <h3 onmouseover="showFeat(this)" onmouseleave="hideSpell(this)">Otherworldly Patron (Fiend, Celestial)</h3>
+                <h3 onmouseover="showFeat(this)" onmouseleave="hideSpell(this)">Otherworldly Patron (Fiend, Celestial, Undead)</h3>
                 <h3 onmouseover="showFeat(this)" onmouseleave="hideSpell(this)">Eldritch Invocations</h3>
                 <h3 onmouseover="showFeat(this)" onmouseleave="hideSpell(this)">Pact Boon (Tome)</h3>
                 <h3 onmouseover="showFeat(this)" onmouseleave="hideSpell(this)">Mystic Arcanum</h3>
@@ -288,6 +292,7 @@
                 <h3 onmouseover="showFeat(this)" onmouseleave="hideSpell(this)">War Caster</h3>
                 <h3 onmouseover="showFeat(this)" onmouseleave="hideSpell(this)">Spell Sniper</h3>
                 <h3 onmouseover="showFeat(this)" onmouseleave="hideSpell(this)">Linguist</h3>
+                <h3>Flash Recall</h3>
             </div>
             <div class="feat">
                 <h2>Invocations</h2>
