--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
         <div class="hori">
             <h1>Floshe</h1>
             <h2>Level: 18</h2>
-            <h2>Class: Undead Celestial Fiend Warlock</h2>
+            <h2>Class: Undead(/Undying) Celestial Fiend Warlock</h2>
             <h2>Race: Locathah</h2>
             <h2>Background: Courtier</h2>
             <h2>Alignment: True Neutral</h2>
         </div>
         <div class="hori">
-            <h2>HP: 170(36)</h2>
+            <h2>HP: 170(+40)(36)</h2>
             <h2>Hit Dice: 18d8</h2>
             <h2>AC: 20</h2>
             <h2>Proficiency: +6</h2>
@@ -40,9 +40,9 @@
                 <h3>Save: +5</h3>
             </div>
             <div class="abil">
-                <h1>Intelligence: 12</h1>
-                <h3>Modifier: +1</h3>
-                <h3>Save: +1</h3>
+                <h1>Intelligence: 14</h1>
+                <h3>Modifier: +2</h3>
+                <h3>Save: +2</h3>
             </div>
             <div class="abil">
                 <h1>Wisdom: 18</h1>
@@ -50,9 +50,9 @@
                 <h3>Save: +10</h3>
             </div>
             <div class="abil">
-                <h1>Charisma: 22</h1>
-                <h3>Modifier: +6</h3>
-                <h3>Save: +12</h3>
+                <h1>Charisma: 24(+4)</h1>
+                <h3>Modifier: +7(+2)</h3>
+                <h3>Save: +13(+2)</h3>
             </div>
         </div>
         <div class="hori">
@@ -68,11 +68,11 @@
             </div>
             <div class="skill">
                 <h2>Intelligence</h2>
-                <h3>Arcana: +1</h3>
-                <h3>History: +7</h3>
-                <h3>Investigation: +7(+5)</h3>
-                <h3>Nature: +1</h3>
-                <h3>Religion: +1</h3>
+                <h3>Arcana: +2</h3>
+                <h3>History: +8</h3>
+                <h3>Investigation: +8(+5)</h3>
+                <h3>Nature: +2</h3>
+                <h3>Religion: +2</h3>
             </div>
             <div class="skill">
                 <h2>Wisdom</h2>
@@ -84,10 +84,10 @@
             </div>
             <div class="skill">
                 <h2>Charisma</h2>
-                <h3>Deception: +12</h3>
-                <h3>Intimidation: +6</h3>
-                <h3>Performance: +6</h3>
-                <h3>Persuasion: +18</h3>
+                <h3>Deception: +13(+2)</h3>
+                <h3>Intimidation: +7(+2)</h3>
+                <h3>Performance: +7(+2)</h3>
+                <h3>Persuasion: +19(+2)</h3>
             </div>
         </div>
         <div class="hori">
@@ -109,9 +109,9 @@
         </div>
         <div class="hori">
             <div class="list">
-                <h2>Caster Level: 17</h2>
-                <h2>Spell Attack: +15</h2>
-                <h2>Spell DC: 23</h2>
+                <h2>Caster Level: 18</h2>
+                <h2>Spell Attack: +16(+2)</h2>
+                <h2>Spell DC: 24(+2)</h2>
             </div>
             <div class="list">
                 <h2>Spell Slots</h2>
@@ -121,7 +121,7 @@
                 <h3>4th Level: 0(2)</h3>
                 <h3>5th Level: 0(2)</h3>
                 <h3>6th Level: 4</h3>
-                <h3>9th Level: 2(1)</h3>
+                <h3>9th Level: 2(+1)</h3>
             </div>
         </div>
         <div class="hori">
@@ -129,7 +129,7 @@
             <div class="slot">
                 <h2>Cantrips</h2>
                 <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Fire Bolt</h3>
-                <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Encode Thoughts</h3>
+                <h3>Encode Thoughts</h3>
                 <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Mage Hand</h3>
                 <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Message</h3>
                 <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Minor Illusion</h3>
@@ -145,8 +145,8 @@
                 <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Hellish Rebuke</h3>
                 <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Scorching Ray</h3>
                 <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Ashardalon's Stride</h3>
+                <h3>Dispel Magic</h3>
                 <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Fireball</h3>
-                <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Glyph of Warding</h3>
                 <h3>Hex</h3>
                 <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Melf's Minute Meteors</h3>
                 <h3 onmouseover="showSpell(this)" onmouseleave="hideSpell(this)">Revivify</h3>
@@ -208,7 +208,7 @@
             <div class="bag">
                 <h2>Currency</h2>
                 <h3>Bank: 40,048 GP</h3>
-                <h3>Bag: 2,450 GP</h3>
+                <h3>Bag: 1,650 GP</h3>
             </div>
             <div class="item">
                 <h2>Equipment</h2>
@@ -231,10 +231,15 @@
                 <h3>Nathan's Paper</h3>
                 <h3>Maid's Stopwatch</h3>
                 <h3>Hazel's Tablet</h3>
-                <h3>Prismatic Wall Glyph of Warding</h3>
-                <h3>Book of Avatars</h3>
 				<h3>Calamitus' Tome</h3>
 				<h3>Silla's Contract<h3>
+            </div>
+            <div class="bag">
+                <h2>Glyphs</h2>
+                <h3>Prismatic Wall</h3>
+                <h3>Astral Projection</h3>
+                <h3>Gate</h3>
+                <h3>Spirit Shroud</h3>
             </div>
         </div>
         <div class="hori">
