--- a/index.html
+++ b/index.html
@@ -91,9 +91,30 @@
                 <h3 id="perf"></h3>
                 <h3 id="pers"></h3>
             </div>
+            <div class="list">
+                <h2>Proficiencies</h2>
+                <h3>Light Armor</h3>
+                <h3>Simple Weapons</h3>
+            </div>
+            <div class="list">
+                <h2>Languages</h2>
+                <h3>Common</h3>
+                <h3>Abyssal</h3>
+                <h3>Aquan</h3>
+                <h3>Celestial</h3>
+                <h3>Sign Language</h3>
+                <h3>Ignan</h3>
+                <h3>Infernal</h3>
+            </div>
+            <div class="list">
+                <h2>Resistances</h2>
+                <h3>Radiant</h3>
+                <h3>Necrotic</h3>
+            </div>
         </div>
         <div class="inline">
             <div>
+                <h1>Spellcasting</h1>
                 <h2 id="clvl"></h2>
                 <h2 id="splatk"></h2>
                 <h2 id="spldc"></h2>
@@ -122,12 +143,91 @@
                 <h3 id="cvnslt8"></h3>
                 <h3 id="cvnslt9"></h3>
             </div>
+            <div class="list">
+                <h2>Cantrips</h2>
+                <h3>Fire Bolt</h3>
+                <h3>Encode Thoughts</h3>
+                <h3>Eldritch Blast</h3>
+                <h3>Message</h3>
+                <h3>Minor Illusion</h3>
+                <h3>Mold Earth</h3>
+                <h3>Prestidigitation</h3>
+                <h3>Produce Flame</h3>
+                <h3>Sacred Flame</h3>
+                <h3>Shocking Grasp</h3>
+            </div>
+            <div class="list">
+                <h2>Spells</h2>
+                <h3>Detect Thoughts</h3>
+                <h3>Hellish Rebuke</h3>
+                <h3>Magic Missle</h3>
+                <h3>Scorching Ray</h3>
+                <h3>Thought Shield</h3>
+                <h3>Ashardalon's Stride</h3>
+                <h3>Dispel Magic</h3>
+                <h3>Fireball</h3>
+                <h3>Hex</h3>
+                <h3>Melf's Minute Meteors</h3>
+                <h3>Revivify</h3>
+                <h3>Spirit Shroud</h3>
+                <h3>Dimension Door</h3>
+                <h3>Sickening Radiance</h3>
+                <h3>Prayer of Healing</h3>
+                <h3>Death Ward</h3>
+                <h3>Scrying</h3>
+            </div>
+            <div class="list">
+                <h2>Rituals</h2>
+                <h3>Alarm</h3>
+                <h3>Ceremony</h3>
+                <h3>Comprehend Languages</h3>
+                <h3>Detect Magic</h3>
+                <h3>Detect Poison and Disease</h3>
+                <h3>Find Familiar</h3>
+                <h3>Guiding Hand</h3>
+                <h3>Identify</h3>
+                <h3>Illusory Script</h3>
+                <h3>Memorize Spell</h3>
+                <h3>Purify Food and Drink</h3>
+                <h3>Scribe Spell</h3>
+                <h3>Speak with Animals</h3>
+                <h3>Tenser's Floating Disk</h3>
+                <h3>Unseen Servant</h3>
+                <h3>Wild Cunning</h3>
+                <h3>Wristpocket</h3>
+                <h3>Clairvoyance</h3>
+                <h3>Glyph of Warding</h3>
+                <h3>Modify Spell</h3>
+                <h3>Commune</h3>
+                <h3>Teleportation Circle</h3>
+                <h3>Contingency</h3>
+            </div>
+            <div class="list">
+                <h2>Mystic Arcanum</h2>
+                <h3>Forbiddance</h3>
+                <h3>Plane Shift</h3>
+                <h3>Dark Star</h3>
+                <h3>Foresight</h3>
+            </div>
+            <div class="list">
+                <h2>Coven</h2>
+                <h3>Shield</h3>
+                <h3>Silvery Barbs</h3>
+                <h3>Calm Emotions</h3>
+                <h3>Wither and Bloom</h3>
+                <h3>Counterspell</h3>
+                <h3>Sending</h3>
+                <h3>Banishment</h3>
+                <h3>Polymorph</h3>
+                <h3>Immolation</h3>
+                <h3>Teleportation Circle</h3>
+            </div>
         </div>
         <div class="inline">
             <h1>Inventory</h1>
             <div class="list">
                 <h2>Currency</h2>
-                <h3>Bank: 40,048 GP</h3>
+                <h3>Bank: 39,648 GP</h3>
                 <h3>Bag: 1,650 GP</h3>
             </div>
             <div class="list">
@@ -139,9 +239,59 @@
                 <h3>Bag of Holding</h3>
                 <h3>Sabine's Gas Mask</h3>
             </div>
+            <div class="list">
+                <h2>Items</h2>
+                <h3>Fine Clothes</h3>
+                <h3>Rope 60ft</h3>
+                <h3>Binder</h3>
+                <h3>Parchment</h3>
+                <h3>Ink Pen</h3>
+                <h3>Gasoline 1gal</h3>
+                <h3>Camera</h3>
+                <h3>Nathan's Paper</h3>
+                <h3>Maid's Stopwatch</h3>
+                <h3>Hazel's Tablet</h3>
+				<h3>Calamitus' Tome</h3>
+				<h3>Silla's Contract<h3>
+                <h3>Nameless' Poem</h3>
+                <h3>Crayons</h3>
+            </div>
+            <div class="list">
+                <h2>Potions</h2>
+                <h3>Supreme Healing</h3>
+                <h3>Eagle's Splendor</h3>
+            </div>
+            <div class="list">
+                <h2>Glyphs</h2>
+                <h3>Prismatic Wall</h3>
+                <h3>Astral Projection</h3>
+                <h3>Gate</h3>
+                <h3>Spirit Shroud</h3>
+                <h3>Meteor Swarm</h3>
+            </div>
         </div>
         <div class="inline">
             <h1>Features</h1>
+            <div class="list">
+                <h2>Race</h2>
+                <h3>Natural Armor</h3>
+                <h3>Leviathan Will</h3>
+                <h3>Limited Amphibiousness</h3>
+            </div>
+            <div class="list">
+                <h2>Background</h2>
+                <h3>Court Functionary</h3>
+            </div>
+            <div class="list">
+                <h2>Class</h2>
+                <h3>Pact Magic</h3>
+                <h3>Otherworldly Patron (Fiend, Celestial, Undead)</h3>
+                <h3>Eldritch Invocations</h3>
+                <h3>Pact Boon (Tome)</h3>
+                <h3>Mystic Arcanum</h3>
+                <h3>Contact Patron</h3>
+                <h3>Transformations</h3>
+            </div>
             <div class="list">
                 <h2>Fiend</h2>
                 <h3>Resilience of the Archfiend</h3>
@@ -155,6 +305,47 @@
                 <h3>Radiant Soul</h3>
                 <h3>Seraphim's Touch</h3>
                 <h3>Seraph Transformation <input type="checkbox" id="transSera"></h3>
+            </div>
+            <div class="list">
+                <h2>Undead/Undying</h2>
+                <h3>Not Dead Yet</h3>
+                <h3>Soul Fire</h3>
+                <h3>Undying</h3>
+                <h3>Your Contract has Expired</h3>
+            </div>
+            <div class="list">
+                <h2>Void</h2>
+                <h3>For Nothing</h3>
+                <h3>For Everything</h3>
+                <h3>Visitors' Gift</h3>
+                <h3>Voidling Transformation</h3>
+            </div>
+            <div class="list">
+                <h2>Contracts</h2>
+                <h3>Bye, Bye</h3>
+                <h3>Yoink or Yeet</h3>
+                <h3>Deal with the Devil</h3>
+                <h3>Wow This Place Sucks</h3>
+            </div>
+            <div class="list">
+                <h2>Feats</h2>
+                <h3>Fire Elemental Adept</h3>
+                <h3>Observant</h3>
+                <h3>War Caster</h3>
+                <h3>Spell Sniper</h3>
+                <h3>Linguist</h3>
+                <h3>Flash Recall</h3>
+            </div>
+            <div class="list">
+                <h2>Invocations</h2>
+                <h3>Devil's Sight</h3>
+                <h3>Book of Ancient Secrets</h3>
+                <h3>Ghostly Gaze</h3>
+                <h3>Eyes of the Rune Keeper</h3>
+                <h3>Aspect of the Moon</h3>
+                <h3>Witch Sight</h3>
+                <h3>Eldritch Spear</h3>
+                <h3>Kiss of Mephistopheles</h3>
             </div>
         </div>
         <script src="app.js"></script>
