--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             <div class="list">
                 <h2>Potions</h2>
                 <h3>Supreme Healing</h3>
-                <h3>Eagle's Splendor</h3>
+                <h3>Eagle's Splendor <input type="checkbox" id="potEag" class="check"></h3>
             </div>
             <div class="list">
                 <h2>Glyphs</h2>
@@ -276,19 +276,17 @@
                 <h3>Natural Armor</h3>
                 <h3>Leviathan Will</h3>
                 <h3>Limited Amphibiousness</h3>
-            </div>
-            <div class="list">
                 <h2>Background</h2>
                 <h3>Court Functionary</h3>
             </div>
             <div class="list">
                 <h2>Class</h2>
                 <h3>Pact Magic</h3>
-                <h3>Otherworldly Patron (Fiend, Celestial, Undead)</h3>
+                <h3>Otherworldly Patron</h3>
                 <h3>Eldritch Invocations</h3>
                 <h3>Pact Boon (Tome)</h3>
                 <h3>Mystic Arcanum</h3>
-                <h3>Contact Patron</h3>
+                <h3>Contact Patron <input type="number" id="conPat" min="0" class="num"></h3>
                 <h3>Transformations</h3>
             </div>
             <div class="list">
@@ -309,15 +307,15 @@
                 <h2>Undead/Undying</h2>
                 <h3>Not Dead Yet</h3>
                 <h3>Soul Fire</h3>
-                <h3>Undying</h3>
-                <h3>Your Contract has Expired</h3>
+                <h3>Undying Transformation <input type="checkbox" id="transUnd" class="check"></h3>
+                <h3>Your Contract has Expired <input type="number" id="yche" min="0" class="num"></h3>
             </div>
             <div class="list">
                 <h2>Void</h2>
                 <h3>For Nothing</h3>
                 <h3>For Everything</h3>
                 <h3>Visitors' Gift</h3>
-                <h3>Voidling Transformation</h3>
+                <h3>Voidling Transformation <input type="checkbox" id="transVoid" class="check"></h3>
             </div>
             <div class="list">
                 <h2>Contracts</h2>
