adds feature ref

--- a/index.html
+++ b/index.html
@@ -291,14 +291,14 @@
             </div>
             <div class="list">
                 <h2>Fiend</h2>
-                <h3>Resilience of the Archfiend</h3>
-                <h3>Brimstone Affinity <input type="number" id="affBrim" min="0" class="num"></h3>
-                <h3>Brimstone Transformation <input type="checkbox" id="transBrim" class="check"></h3>
-                <h3>Brimstone Crags <input type="checkbox" id="domBrim" class="check"></h3>
+                <h3><a href="feature.html#rota">Resilience of the Archfiend</a></h3>
+                <h3><a href="feature.html#braf">Brimstone Affinity</a> <input type="number" id="affBrim" min="0" class="num"></h3>
+                <h3><a href="feature.html#brtr">Brimstone Transformation</a> <input type="checkbox" id="transBrim" class="check"></h3>
+                <h3><a href="feature.html#brcr">Brimstone Crags</a> <input type="checkbox" id="domBrim" class="check"></h3>
             </div>
             <div class="list">
                 <h2>Celestial</h2>
-                <h3>Healing Light <input type="number" id="healLit" min="0" class="num"></h3>
+                <h3><a href="feature.html#heli">Healing Light</a> <input type="number" id="healLit" min="0" class="num"></h3>
                 <h3>Radiant Soul</h3>
                 <h3>Seraphim's Touch <input type="number" id="touchSera" min="0" class="num"></h3>
                 <h3>Seraph Transformation <input type="checkbox" id="transSera" class="check"></h3>
