--- a/feature.html
+++ b/feature.html
@@ -38,13 +38,13 @@
                 <summary>
                     Brimstone Transformation
                     <ul>
-                        <li>activates on bonus action</li>
+                        <li>activates on bonus action or with other bonus action transformation</li>
                         <li>+40 max hp</li>
                         <li>fire immunity and nonmagical physical resistance</li>
                         <li>+10 spd</li>
                         <li>str/dex +2</li>
                         <li>advantage on con checks and all saves</li>
-                        <li>size is large for grappling</li>
+                        <li>+1 size for grappling</li>
                         <li>4d8 fire dmg in 30ft radius at start of turn to choice creatures</li>
                         <li>1min duration regained on short/long rest</li>
                     </ul>
@@ -84,6 +84,59 @@
                     </ul>
                 </summary>
                 At 1st level, you gain the ability to channel celestial energy to heal wounds. You have a pool of d8s that you spend to fuel this healing. The number of dice in the pool equals your proficiency bonus + your warlock level.<br><br>As a bonus action, you can heal one creature you can see within 60 feet of you, spending dice from the pool. The maximum number of dice you can spend at once equals your Charisma modifier (minimum of one die). Roll the dice you spend, add them together, and restore a number of hit points equal to the total.<br><br>Your pool regains all expended dice when you finish a long rest.
+            </details>
+        </div>
+        <div id="raso">
+            <details><br>
+                <summary>
+                    Radiant Soul
+                    <ul>
+                        <li>radiant resistance</li>
+                        <li>add cha mod to one fire/radiant dmg roll</li>
+                        <li>activates on cast of fire/radiant spell</li>
+                        <li>affects a single target</li>
+                        <li>add cha mod to healing spells</li>
+                        <li>double existing cha mod on healing spells</li>
+                        <li>do not ignore own resistance to radiant</li>
+                    </ul>
+                </summary>
+                Starting at 6th level, your link to the Celestial allows you to serve as a conduit for radiant energy. You have resistance to radiant damage, and when you cast a spell that deals radiant or fire damage, you add your Charisma modifier to one radiant or fire damage roll of that spell against one of its targets. You can also add your Charisma modifier to healing spells if you didn't already, or double your modifier if you already did. You do not ignore your own resistance to radiant damage.
+            </details>
+        </div>
+        <div id="sato">
+            <details><br>
+                <summary>
+                    Seraphim's Touch
+                    <ul>
+                        <li>activates on bonues action or with healing light</li>
+                        <li>target self and cha mod creatures in sight</li>
+                        <li>fire/radiant dmg dealt by self heals affected creatures</li>
+                        <li>lasts until start of nex turn</li>
+                        <li>3 uses regained on long rest</li>
+                    </ul>
+                </summary>
+                Starting at 10th level, you can as a bonus, or as part of the same bonus action that you used Healing Light on, you and a number of creatures you choose equal to your Charisma modifier that you can see to become protected by the Seraphim, causing all fire or radiant damage dealt by you to instead heal them. This lasts until the start of your next turn.<br><br>This feature can be used 3 times, and you regain all uses back on a long rest.
+            </details>
+        </div>
+        <div id="satr">
+            <details><br>
+                <summary>
+                    Seraph Transformation
+                    <ul>
+                        <li>activates on bonus action or with other bonus action transformation</li>
+                        <li>heal to max hp</li>
+                        <li>immunity to radiant and resistance to nonmagical physical</li>
+                        <li>+30 spd</li>
+                        <li>gain flying spd equal to walking spd</li>
+                        <li>+2 int and wis</li>
+                        <li>advantage on cha checks except against demons and fiends</li>
+                        <li>+1 size for grappling</li>
+                        <li>+5 to saving throw on reaction</li>
+                        <li>move up to walking speed if +5 to save causes success</li>
+                        <li>1min duration regained on short/long rest</li>
+                    </ul>
+                </summary>
+                Starting at 14th level, as bonus action, or as part of the same bonus action to activate any other transformation, you can transform yourself into a partial angel. When first transforming, you heal to your max HP.  You have immunity to Radiant damage, and resistance to non-magical physical damage. You gain a flying speed equal to your walking speed, and your walking speed increases by 30 feet. Your Wisdom and intelligence scores increase by 2, you have advantage on Charisma checks against non-demons or fiends, and you count as one size larger when determining grappling and carry weight. As a reaction you can give yourself a +5 to a saving throw. If this bonus causes you to succeed, you can move up to your walking speed immediately. This transformation has a duration of 1 minute, which you can stop as another bonus action. Stopping the transformation early saves the remaining time left in the transformation for later. While in firmament, the transformation timer is paused.<br><br>You regain the full duration for the transformation back on a short or long rest.
             </details>
         </div>
     </body>
