--- a/index.html
+++ b/index.html
@@ -299,9 +299,9 @@
             <div class="list">
                 <h2>Celestial</h2>
                 <h3><a href="feature.html#heli">Healing Light</a> <input type="number" id="healLit" min="0" class="num"></h3>
-                <h3>Radiant Soul</h3>
-                <h3>Seraphim's Touch <input type="number" id="touchSera" min="0" class="num"></h3>
-                <h3>Seraph Transformation <input type="checkbox" id="transSera" class="check"></h3>
+                <h3><a href="feature.html#raso">Radiant Soul</a></h3>
+                <h3><a href="feature.html#seto">Seraphim's Touch</a> <input type="number" id="touchSera" min="0" class="num"></h3>
+                <h3><a href="feature.html#setr">Seraph Transformation</a> <input type="checkbox" id="transSera" class="check"></h3>
             </div>
             <div class="list">
                 <h2>Undead/Undying</h2>
