adds more embra

--- a/embra.html
+++ b/embra.html
@@ -36,6 +36,48 @@
                     <h3 id="embChaSav"></h3>
                 </div>
             </div>
+            <div class="inline">
+                <div class="list">
+                    <h2>Intelligence</h2>
+                    <h3 id="embArca"></h3>
+                    <h3 id="embHist"></h3>
+                    <h3 id="embInve"></h3>
+                    <h3 id="embNatu"></h3>
+                    <h3 id="embReli"></h3>
+                </div>
+                <div class="list">
+                    <h2>Wisdom</h2>
+                    <h3 id="embAnim"></h3>
+                    <h3 id="embInsi"></h3>
+                    <h3 id="embMedi"></h3>
+                    <h3 id="embPerc"></h3>
+                    <h3 id="embSurv"></h3>
+                </div>
+                <div class="list">
+                    <h2>Charisma</h2>
+                    <h3 id="embDece"></h3>
+                    <h3 id="embInti"></h3>
+                    <h3 id="embPerf"></h3>
+                    <h3 id="embPers"></h3>
+                </div>
+                <div class="list">
+                    <h2>Languages</h2>
+                    <h3>Common</h3>
+                    <h3>Druidic</h3>
+                    <h3>Celestial</h3>
+                    <h3>Primordial</h3>
+                    <h3>Sylvan</h3>
+                    <h3>Draconic</h3>
+                </div>
+            </div>
+            <div class="inline">
+                <div>
+                    <h1>Spellcasting</h1>
+                    <h2 id="embClvl"></h2>
+                    <h2 id="embSplatk"></h2>
+                    <h2 id="embSpldc"></h2>
+                </div>
+            </div>
         </main>
         <script src="app.js"></script>
         <script src="book.js"></script>
