adds rest of embra base

--- a/embra.html
+++ b/embra.html
@@ -9,7 +9,7 @@
     <body id="embra">
         <main>
             <div class="inline">
-                <h1>Embra</h1>
+                <h1><a href="index.html">Floshe</a> Embra</h1>
                 <h2 id="embLevel"></h2>
                 <h2>Class: Stars Druid</h2>
                 <h2>Race: Awakened Item</h2>
@@ -77,10 +77,62 @@
                     <h2 id="embSplatk"></h2>
                     <h2 id="embSpldc"></h2>
                 </div>
+                <div class="list">
+                    <h2 id="embSplslts">Spell Slots</h2>
+                </div>
+                <div class="list">
+                    <h2>Cantrips</h2>
+                    <h3>Guidance</h3>
+                    <h3>Starry Wisp</h3>
+                    <h3>Elementalism</h3>
+                    <h3>Shillelagh</h3>
+                </div>
+                <div class="list">
+                    <h2>Spells</h2>
+                    <h3>Guiding Bolt</h3>
+                    <h3>Stellar Bodies</h3>
+                    <h3>Absorb Elements</h3>
+                    <h3>Elevated Sight</h3>
+                    <h3>Jump</h3>
+                    <h3>Longstrider</h3>
+                    <h3>Spiny Shield</h3>
+                    <h3>Veil of Dusk</h3>
+                    <h3>Augury</h3>
+                    <h3>Hold Person</h3>
+                    <h3>Pass without Trace</h3>
+                    <h3>Globe of Twilight</h3>
+                    <h3>Protection from Energy</h3>
+                    <h3>Speak with Plants</h3>
+                    <h3>Elemental Bane</h3>
+                    <h3>Freedom of Movement</h3>
+                    <h3>Lesser Restoration</h3>
+                    <h3>Divination</h3>
+                </div>
+            </div>
+            <div class="inline">
+                <h1>Features</h1>
+                <div class="list">
+                    <h2>Race</h2>
+                    <h3>Sentience</h3>
+                    <h3>Limited Action</h3>
+                    <h3>Shared Knowledge</h3>
+                </div>
+                <div class="list">
+                    <h2>Class</h2>
+                    <h3>Druidic</h3>
+                    <h3>Spellcasting</h3>
+                    <h3>Wild Shape</h3>
+                </div>
+                <div class="list">
+                    <h2>Stars</h2>
+                    <h3>Star Map</h3>
+                    <h3>Starry Form</h3>
+                    <h3>Cosmic Omen</h3>
+                </div>
             </div>
         </main>
         <script src="app.js"></script>
-        <script src="book.js"></script>
         <script src="embra.js"></script>
+        <script src="book.js"></script>
     </body>
 </html>
