--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <main>
             <div class="inline">
-                <h1>Floshe</h1>
+                <h1>Floshe <a href="embra.html">Embra</a></h1>
                 <h2 id="level"></h2>
                 <h2>Class: Void Undead/Undying Celestial Fiend Warlock</h2>
                 <h2>Race: Locathah</h2>
@@ -285,7 +285,7 @@
                     <h3>Pact Magic</h3>
                     <h3>Otherworldly Patron</h3>
                     <h3>Eldritch Invocations</h3>
-                    <h3><a href="embra.html">Pact Boon (Tome)</a></h3>
+                    <h3>Pact Boon (Tome)</h3>
                     <h3>Mystic Arcanum</h3>
                     <h3>Contact Patron <input type="number" id="conPat" min="0" class="num"></h3>
                     <h3>Transformations</h3>
